update CSS got keep icon in the center and prevent from squashing

--- a/client/components/banner/style.scss
+++ b/client/components/banner/style.scss
@@ -122,10 +122,12 @@
 .banner__icon-plan {
 	display: flex;
 	margin-right: 16px;
+	flex-direction: column;
+	justify-content: center;
 
 	.plan-icon {
 		height: 32px;
-		width: 32px;
+		max-width: 32px;
 	}
 
 	@include breakpoint( '>480px' ) {
